// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clients is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
        }
      }
    >
      pricings
    </p>
    <div
      className="flex-none layout-row"
    >
      <RoundButton
        active={false}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={[Function]}
        icon=""
        iconClass="fa-chevron-left"
        inverse={false}
        size="small"
        text="Back"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`state.redirect is true 1`] = `
<Redirect
  push={true}
  to="/admin/pricings"
/>
`;

exports[`theme is falsy 1`] = `
<div
  className="flex-100 layout-row layout-wrap layout-align-start-start"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center sec_title"
  >
    <p
      className=" sec_title_text flex-none"
      style={
        Object {
          "color": "black",
        }
      }
    >
      pricings
    </p>
    <div
      className="flex-none layout-row"
    >
      <RoundButton
        active={false}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={[Function]}
        icon=""
        iconClass="fa-chevron-left"
        inverse={false}
        size="small"
        text="Back"
        theme={null}
      />
    </div>
  </div>
</div>
`;
